Updated changelog, M4A1 is now Mk 18 Mod 0

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,16 @@
+X-Sep-2021 v0.1.2 Who Dares Wins
+Changes made:
+New Content:
+Bugfixes and Adjustments:
+*Replaced M4A1 with Mk 18 Mod 0, renamed M4 Carbine to M4A1 Carbine
+*New sprites
+    - Glock 17
+    - Glock 18
+    - Five-seveN
+    - M4A1 Carbine
+    - Mk 18 Mod 0
+    
+
 24-Jun-2021 v0.1.1 Who Dares Wins
 Changes made:
 New Content:
