halved lab buildtime and cost, halved workshop buildtime

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -36,6 +36,7 @@ Bugfixes and Adjustments:
 *Handcuffs now also work on unarmed enemies, by Buscher
 *Fixed issue with UZI sprites
 *Removed USAS-12 from enemy item sets
+*Reduced Armoury and lab buildtime, reduced lab cost
     
 
 24-Jun-2021 v0.1.1 Who Dares Wins
