--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,4 +1,4 @@
-X-Sep-2021 v0.1.2 Who Dares Wins
+14-Oct-2021 v0.1.2 Who Dares Wins
 Changes made:
 New Content:
 *New UI, by efrenespartano
@@ -59,6 +59,8 @@ Bugfixes and Adjustments:
 *Removed USAS-12 from enemy item sets
 *Reduced Armoury and lab buildtime, reduced lab cost
 *Fixed Crash on ufopaedia article for stock
+*Female and Male civilians have inventory sprite
+*Enabled one more terrain per region for Terror Attack and Major Attack 
     
 
 24-Jun-2021 v0.1.1 Who Dares Wins
