added ufopedia articles

--- a/Language/en-US.yml
+++ b/Language/en-US.yml
@@ -735,6 +735,7 @@ en-US:
       STR_MP5_UFOPAEDIA: "The MP5 is one of the most widely used submachine guns in the world. It is used by everything from military forces to private security organizations. It gained significant fame due to its use by the SAS during the Iranian embassy siege in 1980."
       STR_MPX_UFOPAEDIA: "The SIG MPX is a relatively modern submachine gun, designed in 2013. It features a closed, rotating bolt, which is rare for submachine guns. This design choice was chosen to increase user safety and reliability."
       STR_P90_UFOPAEDIA: "The P90 is an unconventional design with a distinctive appearance. It is extremely compact and has an unique top-mounted magazine. Despite as a personal defence weapon being meant for use by military support personnel, the firearm has seen significant adoption among special forces and counter-terrorist units."
+      STR_MP7_UFOPAEDIA: "Created as an answer for a NATO request for a SMG-like weapon that could defeat body armor, the H&K MP7 became the direct rival to the FN P90. It is chambered in HK 4.6x30mm, a cartridge designed specifically for the weapon. Its small size makes it easy to conceal and makes it a viable choice for a sidearm."
       STR_SKORPION_UFOPAEDIA: "A machine pistol designed in Czechoslovakia as a sidearm for vehicle drivers and army staff, designed to be compact to fit into the limited space of armored vehicles. It saw wide use by many armed groups, both terrorist and criminal. "
       STR_UZI_UFOPAEDIA: "The Uzi was one of the first weapons utilizing a telescopic bolt, making the short length of the weapon possible. Developed in Israel, it saw widespread use in over 90 countries and is one of the most produced sub-machine guns in the world."
       STR_UMP_UFOPAEDIA: "While designed as a successor to the MP5, the UMP never saw the same success as its predecessor, despite containing numerous improvements. Unlike the MP5, the UMP is available in the .45 ACP cartridge, giving it more stopping power but having a slightly slower fire rate to compensate for the increased recoil."
@@ -787,6 +788,7 @@ en-US:
       STR_M60_UFOPAEDIA: "A general-purpose machine gun that served as the primary machine gun on the US military during the first half of the cold war. While it saw extensive use, early versions were plagued by reliability issues. While newer designs are available the M60 is still widely used and some have even fallen into the hands of terrorist organizations."
       STR_M249_UFOPAEDIA: "An American adaption of the Belgian FN Minimi, the M249 is a light machine gun widely used by the US armed forces. Unlike many other machine guns, the M249 can be fed both from linked ammunition and STANAG magazines, though the use of the latter is advised to only be used in emergencies due to a higher rate of malfunctions."
       STR_FN_MINIMI_UFOPAEDIA: "A Squad automatic weapon of belgian origin chambered in 5.56 NATO. It has been adopted by numerous countries and served as a base for multiple variants, such as the american M249 and MK 48."
+      STR_FN_MAG_UFOPAEDIA: "A belgian general-purpose machine gun that has seen service in over 80 nations. Created to complement the FN FAL rifle, it has been in service since the early years of the cold war. The FN MAG is chambered in 7.62x51mm NATO, giving it fire-power unmatched by many of our other weapons."
       STR_MK_48_UFOPAEDIA: "The Mark 48  is a variant od the M249 developed for USSOCOM to be fielded by special operations units. Unlike the M249, it fires 7.62x51mm NATO cartridges instead of the lighter 5.56 cartridge."
       STR_RPK_74_UFOPAEDIA: "The RPK-74M is the modernized version of the RPK-74, which itself is a variant of the RPK chambered in 5.45x39mm. It is a light machine gun designed to be compatible with magazines developed for the AK-74."
       STR_PECHENEG_UFOPAEDIA: "A russian general-purpose machine gun that has a heavy non-removable barrel that is forced-air-cooled instead of relying on the barrel to be switched during heavy use. The PHP Pecheneg has seen extensive use by Spetsnaz units. Its name is derived from the pecheneg people, a tribe that lived in the steppes of Russia and Ukraine."
@@ -805,6 +807,7 @@ en-US:
       STR_9MM_PARABELLUM_UFOPAEDIA: "The most popular handgun and submachine gun cartridge in the world. Designed in 1901, the popularity of the 9x19mm Parabellum has grown ever since. It is also the NATO standard pistol cartridge. Its name is derived from the latin saying Si vis pace, Para bellum (if you seek peace, prepare for war)"
       STR_9MM_GYURZA_UFOPAEDIA: "The 9x21mm Gyurza cartridge is a russian handgun round designed to defeat body armour. Its name means blunt-nosed viper in russian."
       STR_FN_57_UFOPAEDIA: "The FN 5.7x28mm cartridge was designed as a replacement to the 9mm parabellum cartridge, though it was never adopted as a NATO standard due to objections of some member nations. It has proven to be very effective against armor. The cartridge was designed alongside the FN P90 and FN Five-seveN, both of which use the round."
+      STR_HK_4_6_UFOPAEDIA: "Designed for the H&K MP7, the HK 4.6x30mm cartridge was designed to be light-weight and small while still rivaling the armor-piercing capabilities of larger cartridges."
       STR_45_ACP_UFOPAEDIA: "The .45 ACP (Automatic Colt Pistol) cartridge was designed for use in prototype Colt semi automatic pistols, and was later chosen to be used in the M1911. While having more stopping power, .45 ACP has generally seen less adoption than the 9x19mm cartridge due to being heavier, larger and more expensive."
       STR_CASELESS_4_73_UFOPAEDIA: "Used in the G11, the most notable quality of the 4-73x33mm cartridge is that it is caseless, consisting only of a propellant, booster and the bullet itself. The lack of a case leads to a lesser weight and the elimination of the need to extract the case from the firearm after firing."
       STR_5_45_UFOPAEDIA: "The 5.45x39mm served as the replacement for the 7.62x39mm cartridge in the soviet military. It followed the general trend of smaller light-weight cartridges being commonly adopted, due to to their better performance in automatic weapons."
@@ -902,9 +905,9 @@ en-US:
       STR_9MM_GYURZA_X30: "9mm Gyurza (30x)"
       STR_FN_57_X20: "FN 5.7x28mm (20x)"
       STR_FN_57_X50: "FN 5.7x28mm (50x)"
-      STR_HK_4_6_30X20: "HK 4.6x30mm (20x)"
-      STR_HK_4_6_30X30: "HK 4.6x30mm (30x)"
-      STR_HK_4_6_30X40: "HK 4.6x30mm (40x)"
+      STR_HK_4_6X20: "HK 4.6x30mm (20x)"
+      STR_HK_4_6X30: "HK 4.6x30mm (30x)"
+      STR_HK_4_6X40: "HK 4.6x30mm (40x)"
       STR_45_ACP_X7: ".45 ACP (7x)"
       STR_45_ACP_X12: ".45 ACP (12x)"
       STR_45_ACP_X25: ".45 ACP (25x)"
@@ -1070,6 +1073,7 @@ en-US:
       STR_RPK_74: "RPK-74M"
       STR_PECHENEG: "PKP Pecheneg"
       STR_NEGEV: "IWI Negev"
+      STR_FN_MAG: "FN MAG"
 
       ###ARTILLERY###
 
