--- a/Language/en-US.yml
+++ b/Language/en-US.yml
@@ -589,9 +589,13 @@ en-US:
       STR_NIGHT_VISION: "Night-Vision Equipment"
       STR_RIOT_GEAR: "Riot Gear"
       STR_ADV_NIGHTVISION: "Advanced Night-Vision"
+      STR_SMG_ACQUISITION: "Submachine Gun Acquistion"
+      STR_MP7_ACQUISTION: "SMG Acquistion: MP7"
+      STR_LIGHT_MILITARY_EQUIPMENT_ACQUISITION: "Light Militart Euipment Acquisition"
       STR_HEAVY_VEST_ACQUISITION: "Heavy Vests"
       STR_SHOTGUN_ACQUISITION: "Shotgun Acquisition"
       STR_REMINGTON_ACQUISITION: "Shotgun Acquisition: Remington 870"
+      STR_SPAS_12_ACQUISTIiON: "Shotgun Acquisition: SPAS 12"
       STR_AUTO_SHOTGUN_ACQUISITION: "Automatic Shotgun Acquisition"
       STR_AA_12_ACQUISITION: "Shotgun Acquisition: AA-12"
       STR_USAS_12_ACQUISITION: "Shotgun Acquisition: USAS-12"
@@ -607,10 +611,13 @@ en-US:
       STR_FX_05_ACQUISITION: "Rifle Acquisition: FX-05 Xiuhcoatl"
       STR_AK12_ACQUISITION: "Rifle Acquisition: AK12"
       STR_HK416_ACQUISITION: "Rifle Acquisition: HK416"
+      STR_G36_ACQUISITION: "Rifle Acquisition: G36"
+      STR_HK417_ACQUISITION: "Rifle Acquisition: HK417"
       STR_SCAR_L_ACQUISITION: "Rifle Acquisition: SCAR-L"
       STR_TAVOR_95X_ACQUISITION: "Rifle Acquisition: IWI Tavor 95X"
       STR_M4A1_ACQUISITION: "Rifle Acquisition: Mk 18 Mod 0"
       STR_AK15_ACQUISITION: "Rifle Acquisition: AK-15"
+      STR_FAMAS_ACQUISITION: "Rifle Acquisition: FAMAS"
       STR_SCAR_H_ACQUISITION: "Rifle Acquisition: SCAR-H"
       STR_SNIPER_ACQUISITION: "Sniper Acquisition"
       STR_PSG1_ACQUISITION: "Sniper Acquisition: PSG1"
@@ -632,6 +639,8 @@ en-US:
       STR_LMG_ACQUISITION: "LMG Acquisition"
       STR_M249_ACQUISITION: "LMG Acquisition: M249"
       STR_MK_48_ACQUISITION: "LMG Acquisition: MK 48"
+      STR_FN_MAG_ACQUISITION: "LMG Acquisition: FN MAG"
+      STR_FN_MINIMI_ACQUISITION: "LMG Acquisition: FN Minimi"
       STR_PECHENEG_ACQUISITION: "LMG Acquisition: PKP Pecheneg"
       STR_AT_ACQUISITION: "AT Weaponry Acquisition"
       STR_PRIVATE_CONTRACTORS: "Private Contractors"
@@ -640,13 +649,14 @@ en-US:
       STR_ORIGIN_12_ACQUISITION: "Private Contract: Origin-12"
       STR_M82_ACQUISITION: "Private Contract: Barrett M82"
       STR_SERBU_ACQUISITION: "Private Contract: Serbu Super-Shorty"
-      STR_P90_ACQUISITION: "Private Contract: FN P90"
+      STR_P90_ACQUISITION: "SMG Acquistion: FN P90"
       STR_G11_ACQUISITION: "Private Contract: HK G11"
       STR_TRG_ACQUISITION: "Private Contract: Sako TRG"
       STR_KS_23_ACQUISITION: "Private Contract: KS-23"
       STR_SR3_ACQUISITION: "Private Contract: SR-3 Vikhr"
       STR_VSS_ACQUISITION: "Private Contract: VSS Vintorez"
       STR_MGL_ACQUISITION: "Private Contract: Milkor MGL"
+      STR_UBGL_ACQUISITION: "Underbarrel Grenade Launcher Acquistion"
 
       STR_INTELLIGENCE_GATHERING: "Intelligence Gathering"
       STR_PRISON_CELLS: "Prison Cells"
@@ -667,6 +677,7 @@ en-US:
       STR_SKYSCRAPER_RAID: "Skyscraper Raid"
       STR_MEDIUM_TRANSPORT: "Medium Deployments"
       STR_LARGE_TRANSPORT: "Large Deployments"
+      STR_TERROR_ATTACK: "Terror Attack"
 
 ### Scripts ###
 
