--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,8 @@
+X-Jan-2024 v1.0
+Changes made:
+* Added Terrain Pack, by Hobbes and collaborators
+* Tweaked terrain lists for Terrorist Attacks and Major Attacks, unique for each region (i.e each one has its own set of terrains, instead of just being the same all the time)
+
 14-Oct-2021 v0.1.2 Who Dares Wins
 Changes made:
 New Content:
