--- a/Language/en-US.yml
+++ b/Language/en-US.yml
@@ -590,7 +590,7 @@ en-US:
       STR_ADV_NIGHTVISION: "Advanced Night-Vision"
       STR_SMG_ACQUISITION: "Submachine Gun Acquistion"
       STR_MP7_ACQUISTION: "SMG Acquistion: MP7"
-      STR_LIGHT_MILITARY_EQUIPMENT_ACQUISITION: "Light Militart Euipment Acquisition"
+      STR_LIGHT_MILITARY_EQUIPMENT_ACQUISITION: "Light Military Euipment Acquisition"
       STR_HEAVY_VEST_ACQUISITION: "Heavy Vests"
       STR_SHOTGUN_ACQUISITION: "Shotgun Acquisition"
       STR_REMINGTON_ACQUISITION: "Shotgun Acquisition: Remington 870"
