Fixed broken strings
Fixed Spas 12 acquisition string, fixed mp7 acquisition string, fixed g36 ag36 removal string

--- a/Language/en-US.yml
+++ b/Language/en-US.yml
@@ -559,6 +559,7 @@ en-US:
       STR_SCAR_L_GL_REMOVAL: "SCAR-L: Remove FN40GL"
       STR_SCAR_H_GL_REMOVAL: "SCAR-H: Remove FN40GL"
       STR_GLOCK_18_STOCK_REMOVAL: "Glock 18: Remove Stock"
+      STR_G36_AG_REMOVAL: "G36: Remove AG36"
       STR_DEFAULT_KEVLAR_BACKPACK_REMOVAL: "(Kevlar, BP): Remove Backpack"
       STR_DEFAULT_KEVLAR_NV_REMOVAL: "(Kevlar, NV): Remove Night Vision"
       STR_DEFAULT_KEVLAR_RIOT_REMOVAL: "(Kevlar, Face Shield): Remove Riot Armor Plates"
@@ -589,12 +590,12 @@ en-US:
       STR_RIOT_GEAR: "Riot Gear"
       STR_ADV_NIGHTVISION: "Advanced Night-Vision"
       STR_SMG_ACQUISITION: "Submachine Gun Acquistion"
-      STR_MP7_ACQUISTION: "SMG Acquistion: MP7"
+      STR_MP7_ACQUISITION: "SMG Acquistion: MP7"
       STR_LIGHT_MILITARY_EQUIPMENT_ACQUISITION: "Light Military Euipment Acquisition"
       STR_HEAVY_VEST_ACQUISITION: "Heavy Vests"
       STR_SHOTGUN_ACQUISITION: "Shotgun Acquisition"
       STR_REMINGTON_ACQUISITION: "Shotgun Acquisition: Remington 870"
-      STR_SPAS_12_ACQUISTIiON: "Shotgun Acquisition: SPAS 12"
+      STR_SPAS_12_ACQUISITION: "Shotgun Acquisition: SPAS 12"
       STR_AUTO_SHOTGUN_ACQUISITION: "Automatic Shotgun Acquisition"
       STR_AA_12_ACQUISITION: "Shotgun Acquisition: AA-12"
       STR_USAS_12_ACQUISITION: "Shotgun Acquisition: USAS-12"
